<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:layout_margin="10dp"
    tools:context=".UniversityScanner">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Create Your University Profile"
        android:textStyle="bold"
        android:textColor="@color/red"
        android:textAlignment="center"
        android:textSize="25sp"
        />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >

                <EditText
                    android:id="@+id/edit_value"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:hint="@string/var_text1"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    android:minHeight="48dp" />

                <EditText
                    android:id="@+id/edit_value1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:hint="@string/var_text2"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    android:minHeight="48dp" />

                <EditText
                    android:id="@+id/edit_value2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:hint="@string/var_text3"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    android:minHeight="48dp" />

                <EditText
                    android:id="@+id/edit_value3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:hint="@string/var_text4"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    android:minHeight="48dp" />

                <EditText
                    android:id="@+id/edit_value4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:hint="@string/var_text5"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    android:minHeight="48dp" />

                <EditText
                    android:id="@+id/edit_value5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:hint="@string/var_text6"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    android:minHeight="48dp" />

                <EditText
                    android:id="@+id/edit_value6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:hint="@string/var_text7"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    android:minHeight="48dp" />

                <EditText
                    android:id="@+id/edit_value7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:hint="@string/var_text8"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    android:minHeight="48dp" />

                <EditText
                    android:id="@+id/edit_value8"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:hint="@string/var_text9"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    android:minHeight="48dp" />

                <EditText
                    android:id="@+id/edit_value9"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:hint="@string/var_text10"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    android:minHeight="48dp" />

                <EditText
                    android:id="@+id/edit_value10"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:hint="@string/var_text11"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    android:minHeight="48dp" />

                <EditText
                    android:id="@+id/edit_value11"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:hint="@string/var_text12"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    android:minHeight="48dp" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                >

                <ImageView

                    android:id="@+id/generate_barcode"
                    android:layout_weight="1"
                    android:layout_width="150dp"
                    android:layout_height="60dp"
                    android:src="@drawable/makeqr"
                    android:gravity="center"
                    />

                <ImageView
                    android:id="@+id/save_barcode"
                    android:layout_weight="1"
                    android:layout_width="150dp"
                    android:layout_height="60dp"
                    android:src="@drawable/savebttn"
                    android:gravity="center"
                    android:layout_marginLeft="20dp"

                    />



            </LinearLayout>

            <ImageView
                android:id="@+id/qr_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/app_name"
                android:layout_gravity="center"
                android:layout_marginTop="40dp"
                />

        </LinearLayout>

    </ScrollView>

</LinearLayout>