<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_margin="7dp"
    tools:context=".Developer">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="30dp"
        android:layout_margin="10dp"
        android:gravity="center"
        >

        <ImageView
            android:layout_width="300dp"
            android:layout_height="150dp"
            android:src="@drawable/devpic"
            android:layout_gravity="center"
            />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Developer contact"
            android:textSize="28dp"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:layout_marginTop="20dp"
            android:textStyle="bold"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Bio_Data"
            android:textSize="15dp"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:layout_marginTop="20dp"
            android:textStyle="normal"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Contact-Info:"
            android:textSize="24dp"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:layout_marginTop="20dp"
            android:textStyle="bold"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textSize="19dp"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:layout_marginTop="5dp"
            android:textStyle="italic"
            android:textIsSelectable="true"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/line"
            android:textSize="10dp"
            android:layout_marginTop="40dp"
            android:textColor="@color/black"
            android:textStyle="normal"
            />

    </LinearLayout>
    </ScrollView>

</LinearLayout>